# app/backend/src/Controller/BookController.php
@@ -2,8 +2,10 @@
 
 namespace App\Controller;
 
+use App\Entity\Author;
 use App\Entity\Book;
 use App\Entity\Genre;
+use App\Entity\Language;
 use App\Enum\AgeRating;
 use Doctrine\ORM\EntityManagerInterface;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
@@ -20,20 +22,48 @@ class BookController extends AbstractController
         $params = $request->request->all();
 
         $repository = $entityManager->getRepository(Genre::class);
-        $genre = $repository->findOneBy(['id' => $params['genre']]);
+        $genre = $repository->findOneBy(['id' => $params['genre_id']]);
 
         if (empty($genre)) {
             return new JsonResponse([
-                'success' => true,
-                'error' => 'Genre id does not exist'
+                'success' => false,
+                'error' => 'Genre id does not exist',
             ]);
         }
 
-        $entityManager->persist(new Book(
-            $params['name'],
-            (float)$params['cost'],
-            $genre,
-            AgeRating::from($params['age_rating'])
+        $languageRepository = $entityManager->getRepository(Language::class);
+        $languageEntity = $languageRepository->findOneBy(['name' => $params['language_id']]);
+
+        if (empty($languageEntity)) {
+            return new JsonResponse([
+                'success' => false,
+                'error' => 'Language id does not exist',
+            ]);
+        }
+
+        $authorRepository = $entityManager->getRepository(Author::class);
+        $authorEntity = $authorRepository->findOneBy(['id' => $params['author_id']]);
+
+        if (empty($authorEntity)) {
+            return new JsonResponse([
+                'success' => false,
+                'error' => 'Language id does not exist',
+            ]);
+        }
+
+
+        $entityManager->persist(
+            new Book(
+                $params['name'],
+                (float)$params['cost'],
+                $genre,
+                AgeRating::from($params['age_rating']),
+                null,
+                $authorEntity,
+                $languageEntity,
+                $params['rating'],
+                $params['number_of_pages'],
+                $params['year'],
             )
         );
         $entityManager->flush();
